UIP-1356 removed z-index from rockerbutton which should fix the non grey out issue

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -389,7 +389,6 @@ button.ellipsis-loader-button {
 
     label {
         position: relative;
-        z-index: 2;
         float: left;
         padding: 0 30px;
 
